--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,16 @@ input:checked + .slider:before {
   transform: scale(0.9);
   border: 1px solid rgb(197, 182, 182);
 }
+
+.playerChoice {
+  flex-direction: column;
+}
+
+/* ///////////////// */
+/* ///// */
+/* combat screen */
+/* ///// */
+/* ///////////////// */
+.combat {
+  grid-template-columns: 1fr 1fr;
+}
