--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,8 @@ input:checked + .slider:before {
   position: relative;
   width: 100%;
   height: 100%;
+  border: none;
+  padding: 0;
 }
 
 .room {
